# feed-summarizer

./: AGENTS.md  ENV-MIGRATION.md  Makefile  PLAN.md  README.md  SPEC.md  azure_storage.py  config.py  conftest.py  kata-compose.yaml  main.py  models.py  prompt.yaml  publisher.py  pyproject.toml  pytest.ini  requirements.txt  scheduler.py  schema.sql  secrets.yaml.example  summarizer.py  uploader.py  utils.py
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  GITHUB_PAGES.md  MERGE_TUNING.md  PUBLISHING.md  RETENTION.md  RUNNING.md  SPEC.md  TELEMETRY.md  TROUBLESHOOTING.md
models/: __init__.py  migrations.py  ops_bulletins.py  ops_feeds_items.py  ops_maintenance.py  ops_status.py  ops_summaries.py  queue.py  schema.py  schema.sql
services/: llm_client.py  mastodon.py  telemetry.py
templates/: bulletin.html  bulletins_index.html  feeds_index.html  index.html
tests/: test_all_files_syntax.py  test_clustering_n_ge_2.py  test_db_maintenance.py  test_entry_normalization.py  test_fetcher_date_parsing.py  test_global_url_dedup.py  test_hashed_cosine_similarity.py  test_improved_merge_logic.py  test_llm_client_content_filter.py  test_llm_provider_selection.py  test_llm_truncated_output.py  test_merge_current.py  test_merge_enhanced.py  test_proxy_support.py  test_publisher.py  test_publisher_html_renderer.py  test_publisher_merge.py  test_publisher_monkeypatch.py  test_publisher_prompts.py  test_publisher_repository.py  test_publisher_rss_builder.py  test_recent_bulletins.py  test_recurring_confidence.py  test_recurring_confidence_comprehensive.py  (+7 more)
(+74 files in other folders)
