[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feed-summarizer"
version = "0.1.0"
description = "Async feed fetch, summarize, and publish pipeline"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "schedule",
    "aiohttp",
    "feedparser",
    "beautifulsoup4",
    "pillow",
    "feedgen",
    "pyyaml",
    "readability-lxml",
    "python-dotenv",
    "markdownify",
    "Markdown",
    "pypdf>=4.2.0",
    "pytest",
    "openai>=1.48.0",
    "setuptools<81",
    "stopwordsiso",
    "ruff",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-aiohttp-client",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-sqlite3",
    "azure-monitor-opentelemetry-exporter",
    "azure-storage-blob",
    "pytest-asyncio>=1.3.0",
    "rich>=14.3.3",
]

[tool.uv]
package = false

[tool.ruff]
# Keep this intentionally minimal: catch real bugs (syntax/name errors, unused vars/imports)
# without forcing stylistic rewrites.
line-length = 120

# Adjust if you run a different baseline.
target-version = "py311"

# Match common generated/artifact folders in this repo.
extend-exclude = [
    "__pycache__",
    ".venv",
    "public",
]

[tool.ruff.lint]
# Roughly equivalent to a conservative Flake8 setup.
select = [
    "E4",
    "E7",
    "E9",
    "F",
]

# If you later enable import sorting ("I"), do it intentionally.
